# DKV

./: CMakeLists.txt  README.md  kvstore.proto
include/: client.h  client_cache.h  consistency_hash.h  kv_store.h  server.h
src/: client.cpp  client_cache.cpp  consistency_hash.cpp  kv_store.cpp  server.cpp
test/: gtest_cache.cpp  gtest_client.cpp  gtest_stress.cpp  gtest_write.cpp  test_client.cpp  test_server.cpp
